--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  font-family: 'Roboto', 'Helvetica', sans-serif; /* Utilisation de Roboto comme police par défaut */
+}
+
+body 
+{
+  padding: 0;
+  margin: 0;
+  background-color: #065654; 
+  color: #BBFFBE; 
+}
+
+button 
+  {
+    background-color: #BBFFBE;
+    box-sizing: border-box;
+    padding: 5px 10px;
+    border: none;
+    box-shadow: 3px 3px 7px;
+    margin-right: 20px;
+    outline: none;
+    font-size: 14px;
+    font-weight: 500;
+    &:active 
+    {
+      transform: translate(1px, 1px);
+      box-shadow: #BBFFBE 0 0 5px;
+    }
+  }
